fix(trello): Fix button on dark mode
Closes #2201

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -164,7 +164,7 @@ SingleTaskPaneToolbar .toggl-button.asana-board, /* new ui v1 */
 .toggl-button.trello {
   text-decoration: none;
   cursor: pointer;
-  color: #737373;
+  color: var(--ds-text) !important;
 }
 
 .toggl-button.trello:not(.toggl-button-edit-form-button) svg {
